--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,19 +8,18 @@
         <%=title%>
     </title>
     <!-- FONT AWESOME -->
-
+    <script src="https://kit.fontawesome.com/f383b6eabf.js" crossorigin="anonymous"></script>
     <!-- CSS -->
 
 </head>
 
 <body>
     <!-- HEADER -->
-    <%- include('_header') %>
 
-        <!-- BODY -->
-        <%- body %>
+    <!-- BODY -->
+    <%- body %>
 
-            <!-- FOOTER -->
+        <!-- FOOTER -->
 </body>
 
 </html>
