--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -30,7 +30,7 @@
   width: 130px;
   height: 40px;
   border: none;
-  background-color: rgb(75, 136, 253);
+  background-color: #4b88fd;
   color: #fff;
   font-size: 16px;
   border-radius: 7px;
@@ -77,6 +77,8 @@ td {
 }
 .view-link {
   padding: 10px;
+  text-decoration: none;
+  color: #0000f1;
 }
 .delete-link {
   padding: 10px;
