--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
 </div>
 
 <!-- show uploaded files -->
-<div class="files-list">
+<div class="files-list" style="margin-bottom: 50px;">
     <div class="list-center-text">
         <h2>Uploaded files</h2>
     </div>
@@ -54,7 +54,7 @@
                     <% for(let file of files) { %>
                         <tr>
                             <td>
-                                <%= file.filename %>
+                                <%= file.fileName %>
                             </td>
                             <td>
                                 <%= file.createdAt.toLocaleDateString() %>
@@ -62,12 +62,12 @@
                             <td>
                                 <%= file.createdAt.toLocaleTimeString() %>
                             </td>
-                            <td><a href="/view" class="view-link"><i
+                            <td><a href="/view/<%= file.file %>" class="view-link"><i
                                         class="fa-solid fa-arrow-up-right-from-square"></i></a></td>
-                            <td><a href="/delete/<%= file.filename %>" class="delete-link"><i
+                            <td><a href="/delete/<%= file.file %>" class="delete-link"><i
                                         class="fa-regular fa-trash-can " style="color: #f00;"></i></a></td>
                         </tr>
-                        <% }; %>
+                        <% } %>
                 </tbody>
             </table>
             <% } %>
