--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,9 @@
     <%- body %>
 
         <!-- FOOTER -->
+
+        <!-- JAVASCRIPT -->
+        <script type="text/javascript" src="/js/file_viewer.js"></script>
 </body>
 
 </html>
